style.css
* {
  box-sizing: border-box;
}

body {
  padding: 0 5px 0 5px;
  margin: 7px;
}

nav {
  display: flex;
  height: 50px;
  align-items: center;
  justify-content: space-around;
  padding-bottom: 5px;
  border-bottom: 2px solid black;
}

.shop-title {
  font-family: 'Glass Antiqua', cursive;
  font-size: 60px;
  margin: 0;
}

.shop-title:hover {
  cursor: pointer;
}

.shop-sections {
  display: flex;
  height: 100%;
  width: 40%;
  padding: 0;
  border-left: 1px solid black;
}

.shop-sections li {
  list-style: none;
  flex: 1;
}

.shop-sections button {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0);
  border: none;
  border-right: 1px solid black;
}

.shop-sections button:hover {
  background-color: rgba(0, 0, 0, .07);
  cursor: pointer;
}

.search-bar-container {
  display: flex;
  flex: .5;
  height: 100%;
  justify-content: center;
  align-items: center;
}

.search-bar {
  height: 70%;
  width: 100%;
  border-radius: 10px;
  border: 1px solid black;
  padding: 5px;
  outline: none;
}

.icons-list {
  display: flex;
  flex: .2;
  justify-content: space-between;
  padding: 0;
}

.icons-list li {
  list-style: none;
}

.icons-list button {
  cursor: pointer;
  background-color: transparent;
  border: none;
}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 500,
  'GRAD' 0,
  'opsz' 24
}

.material-symbols-outlined:hover {
  font-variation-settings: 
  'FILL' 1
}

